fix spinner overlap

--- a/src/Loader.css
+++ b/src/Loader.css
@@ -53,6 +53,7 @@ body {
 	text-align: center;
 	font-size: 50px;
 	padding: 3rem;
+	margin-bottom: 5rem;
 	font-weight: bold;
 }
 
